--- a/weather/package.json
+++ b/weather/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "express": "^3.5.1",
     "raptor-optimizer": "^0.2.33-beta",
-    "raptor-templates": "^0.2.20-beta",
+    "raptor-templates": "^1.0.0",
     "raptor-args": "^0.1.12-beta",
     "browser-refresh": "^0.1.0-beta",
     "bootstrap": "https://github.com/twbs/bootstrap/tarball/v3.1.1",
