Enable logging for browser in development

--- a/weather/config/config.json
+++ b/weather/config/config.json
@@ -9,6 +9,7 @@
 
         "minify": false,
         "bundlingEnabled": false,
+        "enabledExtensions": ["raptor-logging/browser"],
         "transforms": [
             "raptor-optimizer-resolve-css-urls"
         ]
