--- a/weather/package.json
+++ b/weather/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raptorjs-express-app",
+  "name": "weather",
   "version": "0.0.0",
   "description": "Sample Express-based server app that integrates various RaptorJS modules (including raptor-templates, raptor-optimizer and raptor-widgets)",
   "main": "server.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/raptorjs3/samples.git"
+    "url": "https://github.com/raptorjs3/raptor-samples.git"
   },
   "author": "Patrick Steele-idem <pnidem@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/raptorjs3/samples/issues"
+    "url": "https://github.com/raptorjs3/raptor-samples/issues"
   },
-  "homepage": "https://github.com/raptorjs3/samples",
+  "homepage": "https://github.com/raptorjs3/raptor-samples",
   "dependencies": {
     "express": "^3.5.1",
     "raptor-optimizer": "^0.2.33-beta",
@@ -31,5 +31,6 @@
     "temp-units-conv": "^0.1.1",
     "request": "^2.34.0",
     "xml2js": "^0.4.2"
-  }
+  },
+  "private": true
 }
