--- a/weather/package.json
+++ b/weather/package.json
@@ -21,7 +21,7 @@
     "raptor-optimizer": "^0.2.33-beta",
     "raptor-templates": "^1.0.0",
     "raptor-args": "^0.1.12-beta",
-    "browser-refresh": "^0.1.0-beta",
+    "browser-refresh-taglib": "^0.1.0-beta",
     "bootstrap": "https://github.com/twbs/bootstrap/tarball/v3.1.1",
     "raptor-widgets": "^0.2.7-beta",
     "jquery": "^2.1.0",
