--- a/weather/package.json
+++ b/weather/package.json
@@ -31,7 +31,8 @@
     "temp-units-conv": "^0.1.1",
     "request": "^2.34.0",
     "xml2js": "^0.4.2",
-    "raptor-sample-ui-components": "^0.1.0-beta"
+    "raptor-sample-ui-components": "^0.1.0-beta",
+    "less": "^1.7.0"
   },
   "private": true
 }
