Fixed version for raptor-sample-ui-components

--- a/weather-dust/package.json
+++ b/weather-dust/package.json
@@ -38,7 +38,7 @@
     "raptor-dust": "^0.3.7-beta",
     "view-engine-raptor": "^0.1.4-beta",
     "dustjs-linkedin": "^2.3.5",
-    "raptor-sample-ui-components": "0.1.0-beta",
+    "raptor-sample-ui-components": "^0.1.0-beta",
     "less": "^1.7.0"
   },
   "private": true
